[package]
name = "tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", feature = ["derive"], features = ["derive"] }
anyhow = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
octocrab = "0.18.1"
tokio = { version = "1.17.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
wiremock = "0.5.3"
serde = "1.0.152"
chrono = "0.4.23"
